kubernetes/99-argocd/12-stack-auth-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stack-auth-test-service
  namespace: six-degrees-apps
spec:
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 8102
    targetPort: 8102
  - name: dashboard
    protocol: TCP
    port: 8101
    targetPort: 8101
  selector:
    app: stack-auth-test
