kubernetes/99-argocd/12-stack-auth-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stack-auth-test
  namespace: six-degrees-apps
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stack-auth-test-api.6degrees.com.sa
        - stack-auth-test-dashboard.6degrees.com.sa
      secretName: stack-auth-test-tls
  rules:
    - host: stack-auth-test-api.6degrees.com.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stack-auth-test-service
                port:
                  number: 8102
    - host: stack-auth-test-dashboard.6degrees.com.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stack-auth-test-service
                port:
                  number: 8101
